# docs/swagger.json
@@ -14,7 +14,7 @@
             "get": {
                 "security": [
                     {
-                        "BearerAuth": []
+                        "ApiKeyAuth": []
                     }
                 ],
                 "description": "Request to retrieve data from a person",
@@ -131,11 +131,6 @@
         },
         "/pub/user/login": {
             "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
                 "description": "Request for Login",
                 "consumes": [
                     "application/json"
